--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body{
   align-items: center;
   justify-content: center;
 
-  background-color: #ff0404ab;
+  background-color: #c98181ab;
 
  /* 1 rem = 16px */
   width: 20rem;
@@ -49,7 +49,7 @@ body{
 }
 
 /* imagem */
-img{
+.foto{
     width: 250px;
      height: 250px; 
 
@@ -58,7 +58,7 @@ img{
     transition: 0.5s;
 }
 
-img:hover {
+.foto:hover {
     box-shadow: 0 0 10px var(--cor-terciaria);
     cursor: pointer;
     transform: scale(1.05);
